# CineBook-

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: __init__.py  main.py
app/core/: config.py  database.py
app/models/: __init__.py  booking.py  enums.py  movie.py  screen.py  seat.py  showtime.py  user.py
docs/: schema.md
